<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.zyx.yoyo.MainActivity" >

    <LinearLayout
        android:id="@+id/datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datepicker"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/startdate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="chooseDate"
            android:text="@string/startdate"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/enddate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="chooseDate"
            android:text="@string/enddate"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>

    <com.zyx.yoyo.ClearEditText
        android:id="@+id/filter_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datepicker"
        android:layout_marginTop="5dip"
        android:background="@drawable/search_bar_edit_pressed"
        android:drawableLeft="@drawable/search_bar_icon_normal"
        android:hint="@string/inputkeyword"
        android:singleLine="true"
        android:textSize="15.0dip" />

    <TextView
        android:id="@+id/no_flow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noflow"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/titletab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="center" >

        <Button
            android:id="@+id/system"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/system" />

        <Button
            android:id="@+id/thirdpart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/thirrdpart" />

        <Button
            android:id="@+id/allapp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/allapp" />
    </LinearLayout>

    <ListView
        android:id="@+id/applist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/titletab"
        android:layout_below="@id/filter_edit"
        android:divider="@drawable/line" >
    </ListView>

</RelativeLayout>