<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="450dp"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/installedappicon" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/installedappname"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/total_flows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalflows"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/used_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usedtendays"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#000" >
    </LinearLayout>

    <TextView
        android:id="@+id/no_flow"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/nouseddatas"
        android:textColor="@color/blue"
        android:visibility="gone" />

    <ListView
        android:id="@+id/everyday_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/line"
        android:minHeight="300dp" >
    </ListView>

</LinearLayout>